added materials stuff

--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "clean-webpack-plugin": "^4.0.0",
     "copy-webpack-plugin": "^11.0.0",
     "css-loader": "^6.7.1",
+    "dat.gui": "^0.7.9",
     "file-loader": "^6.2.0",
     "html-loader": "^4.1.0",
     "html-webpack-plugin": "^5.5.0",
@@ -23,6 +24,7 @@
     "portfinder-sync": "^0.0.2",
     "raw-loader": "^4.0.2",
     "sass-loader": "^13.0.2",
+    "stats.js": "^0.17.0",
     "style-loader": "^3.3.1",
     "three": "^0.144.0",
     "webpack": "^5.74.0",
